# python-learn

./: .gitignore  README.md  pyproject.toml  sampling_results.json
configs/: config.json
exercises/: py-day1.py  py-day10.py  py-day11.py  py-day2.py  py-day3.py  py-day4.py  py-day5.py  py-day8.py  py-day9.py  sampling_results.json
info_extractor/: README.md  __init__.py  requirements.txt
info_extractor/examples/: example_usage.py
info_extractor/src/: extractor.py  main.py  models.py  utils.py
info_extractor/tests/: test_extractor.py
rag_ai_history/: knowledge.md  rag_ai_history.py
